# FeatherPanel

./: .coderabbit.yaml  .cursorignore  .gitignore  CHANGELOG.md  LICENSE  README-Docker.md  TODO.md  app  count.js  docker-compose-dev.yml  docker-compose-new-frontend.yml  docker-compose-prod.yml  docker-compose.v2.dev.yml  docker-compose.v2.git.yml  docker-compose.v3.yml  docker-compose.yml  env.example  install.bash  makefile  nginx.conf  permission_nodes.fpperm  permission_nodes.txt  run-in-docker.bash  secret.rex  todo.md
.github/: CODEOWNERS  README.md  SECURITY.md
backend/: .php-cs-fixer.dist.php  Caddyfile  Dockerfile  cli  composer.json  cron-runner.sh  init.sh  nginx.conf  phpcs.xml  phpstan.neon  phpunit.xml  phpunit.xml.dist  setup-code-prod.sh  setup-cron.sh  supervisord.conf
cli/: FeatherCli.csproj  Makefile  Program.cs  README.md
count-results/: count-results-2025-11-01T11-06-42-272Z.json
docs/: PERMISSIONS.md
featherpanel-frontendv2/: .dockerignore  .license-header  .license-header-vue  Dockerfile  eslint.config.mjs  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/: .dockerignore  .license-header  .license-header-vue  Dockerfile  env.d.ts  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontendv2/: .ncurc.js  Caddyfile  next.config.ts  (+6 more)
worker/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  featherpanel-mail-worker.service
worker/src/: config.rs  database.rs  mailer.rs  main.rs  models.rs
(+2057 files in other folders)
