[package]
name = "featherpanel-mail-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# MySQL/MariaDB driver
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Email sending
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls", "hostname"] }

# Configuration and environment
dotenv = "0.15"
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Colored output (for Minecraft-style color codes)
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

